fix token calcation method when model is gpt-4o-2024-08-06